--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     Crystal Collectors!
              </h1>
 
-    <div style="color:white" id="instructions">
+    <div style="font-weight:bold" id="instructions">
         <p> You will be given a random number at the start of the game.</p>
         <p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
         <p> You win the game by matching your total score to the random number. You lose the game if your total score goes above
